[package]
authors = ["Martin Tomasi <martin.tomasi@gmail.com>"]
name = "dupfinder"
version = "0.1.0"

[dependencies]
byteorder = "1.2.7"
crossbeam = "0.4"
failure = "0.1.3"
image = "0.19"
parking_lot = "0.6"
rayon = "1.0"
serde = "1.0"
serde_json = "1.0"
structopt = "0.2"
structopt-derive = "0.2"
twox-hash = "1.1"
walkdir = "2"

[dependencies.img_hash]
features = ["rust-image"]
git = "https://github.com/GyrosOfWar/img_hash"
