[package]
authors = ["Martin Tomasi <martin.tomasi@gmail.com>"]
name = "dupfinder"
version = "0.1.0"
edition = "2018"

[dependencies]
byteorder = "1.3.1"
crossbeam = "0.7.1"
failure = "0.1.5"
image = "0.21.0"
parking_lot = "0.7.1"
rayon = "1.0.3"
serde = "1.0.89"
serde_json = "1.0.39"
structopt = "0.2.15"
structopt-derive = "0.2.15"
twox-hash = "1.1.2"
walkdir = "2.2.7"

[dependencies.img_hash]
features = ["rust-image"]
git = "https://github.com/GyrosOfWar/img_hash"
